--- a/style.css
+++ b/style.css
@@ -699,10 +699,7 @@ p {
     font-weight: 700;
 }
 
-.twitter,
-.facebook,
-.dribbble,
-.instagram {
+.social {
     max-width: 400px;
     margin: auto auto auto auto;
 }
