--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1438,8 +1438,8 @@ img {
 .thumbnail a>img,
 .thumbnail>img {
     display: block;
-    max-width: 100%;
-    height: auto
+    max-width: 270px;
+    height: 270px;
 }
 
 .img-rounded {
