--- a/css/nonminifier/stylenonminifier.css
+++ b/css/nonminifier/stylenonminifier.css
@@ -119,6 +119,7 @@ a:hover {
     border-color: rgba(255, 255, 255, .2);
 }
 
+
 .d-bloc .a-btn,
 .d-bloc .navbar a,
 .d-bloc .navbar-brand,
@@ -678,6 +679,10 @@ a {
 
 p {
     font-size: 12px;
+}
+
+.txt {
+    font-size: 20px;
 }
 
 .tight-width-whitespace {
